# dodone

./: .gitignore  README.md  pyproject.toml
app/: crud.py  main.py  models.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: login.py  todos.py  users.py
app/core/: config.py  crud.py  db.py
tests/: conftest.py  utils.py
tests/api/: test_login.py  test_todos.py  test_users.py
tests/crud/: test_user.py
