[tool.poetry]
name = "dodone"
version = "0.1.0"
description = ""
authors = ["Muhammad Ahmad <ahmadshaukat_4@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
sqlmodel = "^0.0.16"
psycopg = {version = "^3.1.18", extras = ["binary"]}
pytest = "^8.0.2"
httpx = "^0.27.0"
mypy = "^1.9.0"
emails = "^0.6"
jinja2 = "^3.1.3"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240311"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
